--- a/css/style1.css
+++ b/css/style1.css
@@ -28,7 +28,7 @@ div#q2
 
 div#q3
 {
-    background-image: url('/imagens/pattern003.png');
+    background-image: url('imagens/pattern003.png');
 }
 
 
