--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body
     background-attachment: fixed;
     */
     /* shorthand -> background 
-       color > image > position > repeat > [size] > attachment
+       color > image > position > repeat  > attachment
     */
     height: 100vh;
     background: black  url('../imagens/wallpaper002.jpg') center center no-repeat  fixed;
