--- a/css/tabela02.css
+++ b/css/tabela02.css
@@ -15,6 +15,14 @@ td, th
     padding: 10px;
 }
 
+caption
+{
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightgray;
+}
+
 td.num
 {
     text-align: right;
