--- a/css/tabela02.css
+++ b/css/tabela02.css
@@ -7,6 +7,7 @@ table
 {
     width: 500px;
     border-collapse: collapse;
+    position: relative;
 }
 
 td, th
@@ -23,6 +24,19 @@ caption
     background-color: lightgray;
 }
 
+thead, tfoot
+{
+    background-color: gray;
+    color: white;
+}
+
+thead > tr > th
+{
+    position: sticky;
+    top: -1px;
+    background-color:  gray;
+}
+
 tbody > tr:nth-child(2n)/* efeito zebrado*/
 {
     background-color: rgb(156, 199, 195);
@@ -33,8 +47,3 @@ td.num
     text-align: right;
 }
 
-thead, tfoot
-{
-    background-color: gray;
-    color: white;
-}
