--- a/css/tabela04.css
+++ b/css/tabela04.css
@@ -6,22 +6,19 @@ body
 table
 {
     border-collapse: collapse;
-    width: 300px;
+    /*width: 300px;*/
 }
-td
+
+caption
 {
-    border: 1px solid black;
+    font-size: 1.3em;
+    font-weight: bold;
     padding: 10px;
-    text-align: center;
 }
 
-#cabecalho
+th, td
 {
-    background-color: black;
-    color: aqua;
+    border: 1px solid gray;
+    padding: 10px;
 }
 
-#conteudo
-{
-    background-color: aqua;
-}
